[gd_scene load_steps=5 format=2]

[ext_resource path="res://demo/ui/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://demo/src/FractureBody.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/src/Fracture.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.25
bounce = 1.0
absorbent = true

[node name="DelaunyConvexTest" type="Node2D"]

[node name="Fracture" type="Node2D" parent="."]
script = ExtResource( 3 )
fracture_body_color = Color( 0.137255, 0.576471, 0.886275, 1 )
fracture_body_template = ExtResource( 2 )
delauny_fracture = true
delauny_type = 1
cuts = 256
min_area = 500

[node name="SourcePolygons" type="Node2D" parent="Fracture"]
show_behind_parent = true

[node name="Polygon2D" type="Polygon2D" parent="Fracture/SourcePolygons"]
show_behind_parent = true
position = Vector2( 0, -330.18 )
color = Color( 0.545098, 0.545098, 0.545098, 1 )
polygon = PoolVector2Array( -387.17, -461.463, -88, -485.82, 312, -333.82, 592, -45.82, 520, 298.18, 0, 386.18, -552, 162.18 )

[node name="Line2D" type="Line2D" parent="Fracture/SourcePolygons/Polygon2D"]
points = PoolVector2Array( -552, 162.18, -384, -461.82, -88, -485.82, 312, -333.82, 592, -45.82, 520, 298.18, 0, 386.18, -552, 162.18 )
default_color = Color( 1.5, 1.5, 1.5, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Parent" type="Node2D" parent="Fracture"]

[node name="Timer" type="Timer" parent="Fracture"]
wait_time = 3.0

[node name="VisibleTimer" type="Timer" parent="Fracture"]
one_shot = true

[node name="SlowdownTimer" type="Timer" parent="Fracture"]
one_shot = true

[node name="Floor" type="StaticBody2D" parent="Fracture"]
modulate = Color( 0.537255, 0.266667, 0.266667, 1 )
position = Vector2( 0, 933.82 )
physics_material_override = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Fracture/Floor"]
polygon = PoolVector2Array( -1829.84, 455.127, -15.1694, -546.559, 1313.25, 105.895, 2018.73, -48.1862, 2014.24, 270.593 )

[node name="Polygon2D" type="Polygon2D" parent="Fracture/Floor"]
color = Color( 0.603922, 0.603922, 0.603922, 1 )
polygon = PoolVector2Array( -1819.15, 451.564, -10.6794, -542.069, 1309.69, 109.458, 2023.22, -48.1862, 2023.22, 270.593 )

[node name="Line2D" type="Line2D" parent="Fracture/Floor/Polygon2D"]
points = PoolVector2Array( -1815.59, 451.564, -10.6794, -546.559, 1316.81, 105.895, 2014.24, -43.6963, 2014.24, 252.634, -1815.59, 451.564 )
width = 15.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Title" parent="CanvasLayer" instance=ExtResource( 1 )]
text = "DELAUNY FRACTURE CONVEX"
[connection signal="timeout" from="Fracture/Timer" to="Fracture" method="_on_Timer_timeout"]
[connection signal="timeout" from="Fracture/VisibleTimer" to="Fracture" method="_on_VisibleTimer_timeout"]
[connection signal="timeout" from="Fracture/SlowdownTimer" to="Fracture" method="_on_SlowdownTimer_timeout"]
